--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,6 +45,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "Companies", companies_path %></li>
               <li><%= link_to "Users", users_path(:last => "50") %></li>
+              <li><%= link_to "Usage Reports", usage_path %></li>
             </ul>
           </li>
         </ul>
