--- a/app/views/sections/_continue.html.erb
+++ b/app/views/sections/_continue.html.erb
@@ -1,42 +1,74 @@
-<% if correct == true %>
-  <%= render "sections/modals/correct_modal" %>
-<% end %>
-
 <%= form_tag({ :controller => :sections, :action => "continue" }, :remote => true, :method => "get", "data-type" => "html", :id => "challenge_form") %>
 <div class="task row">
   <div class="span9">
     <div class="question">
-      <%= image_tag path.path_pic, :style => "width: 50px; float:left;" %>
-      <h2 style="margin-left:55px;">Section <%= section.position.to_s %>. <%= section.name %></h2>
+      <%= image_tag @path.path_pic, :style => "width: 50px; float:left;" %>
+      <h2 style="margin-left:55px;">Section <%= @section.position.to_s %>. <%= @section.name %></h2>
       <blockquote style="margin: 40px 20px 20px 30px;">
         <p>
-          <%= task.question %>
+          <%= @task.question %>
         </p>
-        <% if hint %><p style="font-style:italic; font-size: 14px;"><%= hint %></p><% end %>
+        <% if @hint %><p style="font-style:italic; font-size: 14px;"><%= @hint %></p><% end %>
       </blockquote>
-      <%= render "info_resource", { :info_resource => info_resource } %>
+      <%= render "info_resource", { :info_resource => @info_resource } %>
     </div>
     <div class="answer">
-      <input type="hidden" name="task_id" value="<%= task.id %>">
-      <% if task.question_type == "text" && path.game_type == "character guess" %>
-        <%= render "character_guess", { :answer => task.answer1 } %>
-      <% elsif task.question_type == "text" %>
-        <%= render "single_answer", { :task => task } %>
+      <input type="hidden" name="task_id" value="<%= @task.id %>">
+      <% if @task.question_type == "text" && @path.game_type == "character guess" %>
+        <%= render "character_guess", { :answer => @task.answer1 } %>
+      <% elsif @task.question_type == "text" %>
+        <%= render "single_answer", { :task => @task } %>
       <% else %>
-        <%= render "multiple_choice_answer", { :task => task } %>
+        <%= render "multiple_choice_answer", { :task => @task } %>
       <% end %>
     </div>
   </div>
   <div class="span7">
-  <% if path.game_type == "picture" %>
-    <%= render "sections/games/picture_game", { :picture => "", :progress => progress } %>
-  <% elsif path.game_type == "raw numbers" %>
+    <div>
+  <% if @path.game_type == "picture" %>
+    <%= render "sections/games/picture_game", { :picture => "", :progress => @progress } %>
+  <% elsif @path.game_type == "raw numbers" %>
     <%= render "sections/games/raw_numbers" %>
-  <% elsif path.game_type == "raw streak" %>
+  <% elsif @path.game_type == "raw streak" %>
     <%= render "sections/games/raw_streak" %>
   <% else %>
-    <%= render "sections/games/progress_box", { :earned_points => earned_points, :possible_points => possible_points, :streak_points => streak_points } %>
+    <%= render "sections/games/progress_box", { :earned_points => @earned_points, :possible_points => @possible_points, :streak_points => @streak_points } %>
   <% end %>
+    </div>
+    <script>
+      $(function(){
+        $("#challenge_messages").fadeIn(1000);
+      });
+    </script>
+    <table id="challenge_messages" style="margin-top:30px; font-weight: bold; color:#57A957; display:none;">
+    <% if @points_awarded %>   
+      <tr>
+        <td style="padding: 15px 15px 0 0; text-align:right; border-top:none;">
+          <% if @correct == true %>
+            <p style="font-size: 30px; text-decoration:underline;">Correct!</p>
+            <p style="font-size: 20px;"><strong>+<%= @points_awarded >= 10 ? 10 : @points_awarded %></strong> <span style="font-size:20px;">points</span></p>
+          <% elsif @correct == false %>
+            <p style="font-size: 30px; color: red;">Incorrect</p>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+    <% if @streak_name %>
+      <tr>
+        <td style="padding: 15px 15px 0 0; font-size: 20px; color:darkcyan; text-align:right; border-top:none;">
+          <p style="font-size: 20px; text-decoration:underline;">Achievement: <strong style="text-transform:uppercase;"><%= @streak_name %></strong></p>
+          <p style="font-size: 20px;"><strong>+<%= @streak_points.to_i %></strong> <span style="font-size:20px;">points</span></p>
+        </td>
+      </tr>
+    <% end %>
+    <% if @leaderboard %>
+      <tr>
+        <td style="padding: 15px 15px 0 0; color:darkgoldenrod; text-align:right; border-top:none;">
+          <p style="font-size: 18px;">Passed <%= @leaderboard.user.name %>'s score (<%= @leaderboard.score %>)</p>
+        </td>
+      </tr>
+    <% end %>
+    </table>
   </div>
 </div>
 <div class="row">
