--- a/app/views/sections/games/_progress_box.html.erb
+++ b/app/views/sections/games/_progress_box.html.erb
@@ -1,16 +1,13 @@
 <script>
 $(function(){
-  <% unless @correct.nil? %> set_answer_status(<%= @correct %>); <% end %>
   <% unless @jumpstart || (@earned_points == 0 && @correct.nil?)%> start_question_timer(); <% end %>
   $("#progressbar").progressbar({ value: <%= @progress %> });
 });
 </script>
 <section class="progress-box" style="margin-bottom: 50px;">
   <div style="float:right; margin-top: 10px;">
-    <span class="points total">+<%= @earned_points %></span>
-    <span class="points streak">+<%= @streak_points %></span>
+    <span class="points total">+<%= @earned_points %> Total</span>
     <span class="timer" id="countdown_timer">00:30</span>
   </div>
   <div id="progressbar" style="float:right; margin: 4px; width: 160px; height: 28px;" alt="Progress Bar"></div>
-  <div id="correct_status" style="float:right; margin-top:10px; margin-right: 10px; font-weight: bold; font-size: 36px;"></div>
 </section>
