--- a/app/views/paths/_settings.html.erb
+++ b/app/views/paths/_settings.html.erb
@@ -14,6 +14,15 @@
     </div>
   </div>
   <div class="field clearfix">
+    <%= f.label :tags %>
+    <div class="input">
+      <%= f.text_area :tags, :rows => "1", :placeholder => "Seperate each tag with a comma...", :style => "width: 300px;" %>
+    </div>
+    <div class="input" style="padding: 5px 0 5px 0; line-height: 15px;">
+      <span>Adding descriptive tags will make the <%= name_for_paths %> more searchable and more recommendable.</span>
+    </div>
+  </div>
+  <div class="field clearfix">
     <%= f.label :category %>
     <div class="input">
       <select id="path_category_id" name="path[category_id]">
@@ -24,7 +33,6 @@
       </select>
     </div>
   </div>
-  <hr style="margin-top:10px; margin-bottom:10px;"/>
   <div class="field clearfix" style="margin-bottom: 0px;">
     <label>Permissions</label>
     <div class="input">
@@ -62,8 +70,7 @@
       </ul>
     </div>
   </div>
-  <hr style="margin-top:10px; margin-bottom:10px;"/>
-  <div class="field clearfix">
+  <div class="field clearfix" style="margin-top:10px;">
     <label>Picture URL</label>
     <div class="input">
       <%= f.text_field :image_url, :id => "image_url_input", :class=>"xlarge", :placeholder => "URL to picture..." %>
@@ -72,7 +79,7 @@
   </div>
   <div class="field clearfix">
     <div class="input">
-      <%= image_tag(path.path_pic, :class => "image_url_preview", :height => "90px", :style=>"margin:30px 0px 20px 0  px") %>
+      <%= image_tag(path.path_pic, :class => "image_url_preview", :height => "50px", :style=>"margin:30px 0px 20px 0  px") %>
     </div>
   </div>
   <hr/>
