--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -2,25 +2,15 @@
 $(function(){
   $(".delete_user_button").on("ajax:success",
     function(event, data){
-      $("#company-profile").prepend(data);
-      $(".alert-message").fadeOut(5000);
+      $(this).parents("tr").html(data);
     }
   );
 });
 </script>
 <section id="company-profile">
-  <h1><%= @company.name %></h1>
-  <ul class="tabs">
-    <li class="active"><a href="#">Users</a></li>
-    <li><%= link_to "Settings", edit_company_path(@company) %></li>
-    <li><%= link_to "User Roles", user_roles_path %></li>
-    <li><%= link_to "Custom Styles", custom_styles_path %></li>
-  </ul>
+  <%= render "companies/tab_header", { :company => @company, :mode => "users" } %>
   <section id="users">
     <h2 style="margin-bottom:15px;">Registered Users</h2>
-    <% if @users.empty? %>
-      <p>You do not have any users for your organization yet.</p>
-    <% else %>
     <%= will_paginate @users, :style => "float:left; margin-bottom:0;" %>
     <div style="float:right; margin: 18px 0 0px 0;">
       <%= form_tag @company, :method => "get" do %>
@@ -40,38 +30,31 @@ $(function(){
         </tr>
       </thead>
       <tbody>
-        <% user_counter = 1 %>
-        <% @users.each do |u| %>
+        <% if @users.empty? %>
+        <tr><% (1..6).each do %><td>...</td><% end %></tr>
+        <% else %>
+          <% user_counter = 1 %>
+          <% @users.each do |u| %>
           <tr>
             <td><%= user_counter.to_s %></td>
             <td><%= link_to u.name, u %></td>
             <td><%= link_to u.user_role.name, edit_role_user_path(u) unless u.user_role.nil?%></td>
-            <%
-              enrolled_paths = []
-              u.enrolled_paths.each do |p|
-                enrolled_paths << p.name
-              end
-              enrolled_paths = enrolled_paths.join(", ")            
-            %>
-            <% if enrolled_paths.blank? %>
-              <td>None</td>
-            <% else %>
-              <td><%= truncate(enrolled_paths, :length => 60) %></td>
-            <% end %>
+            <td><%= truncate((u.enrolled_paths.to_a.collect {|i| i.name}).join(", "), :length => 60) %></td>
             <td><%= u.earned_points.to_s %></td>
             <td>
-            <% if current_user == u %>
-              <%= link_to "Delete", "#", :class => "btn secondary disabled" %>
-            <% else %>
-              <%= link_to "Delete", u, :method => "delete", :remote => true, "data-type" => "html", :confirm => "Are you sure you want to delete this user?", :class => "btn secondary delete_user_button" %>
-            <% end %>
+              <% unless current_user == u %>
+                <%= link_to "Delete", u, :method => "delete", :remote => true, "data-type" => "html", 
+                :confirm => "Are you sure you want to delete this user?", 
+                :class => "btn secondary delete_user_button" %>
+              <% end %>
             </td>
           </tr>
           <% user_counter += 1 %>
+          <% end %>
         <% end %>
       </tbody>
     </table>
-    <% end %>
+    <hr>
     <%= will_paginate @users %>
     <h4>Note: Adding Users</h4>
     <p>Users must be added to a specific user role. To invite new users, click on the <strong>User Roles</strong> tab above, then click on one of the user roles in the table. From there, you'll find a link to use to invite new users to your organization.</p>
