--- a/app/views/custom_styles/index.html.erb
+++ b/app/views/custom_styles/index.html.erb
@@ -1,11 +1,5 @@
 <section id="company-settings" style="min-height: 500px;">
-  <h1><%= @company.name %></h1>
-  <ul class="tabs">
-    <li><%= link_to "Users", @company %></li>
-    <li><%= link_to "Settings", edit_company_path(@company) %></li>
-    <li><%= link_to "User Roles", user_roles_path %></li>
-    <li class="active"><a href="#">Custom styles</a></li>
-  </ul>
+  <%= render "companies/tab_header", { :company => @company, :mode => "styles" } %>
   <section>
     <h2 style="margin-bottom:15px;">Custom Styles</h2>
     <% if @custom_style.nil? %>
