--- a/app/views/paths/edit.html.erb
+++ b/app/views/paths/edit.html.erb
@@ -17,6 +17,7 @@
   <div style="float:right; display:inline;">
     <% if @path.is_published %>
       <%= link_to "View", @path, :class => "btn primary", :style => "margin:10px 0 10px 10px;" %>
+      <%= link_to "Unpublish", unpublish_path_path(@path), :class => "btn secondary", :style => "margin:10px 0 10px 10px;", :confirm => "Are you certain you want to unpublish this "+name_for_paths+"?" %>
     <% else %>
       <%= link_to "Publish", publish_path_path(@path), :confirm => "Are you certain that you want to publish this just yet? Once its been published, it cannot be unpublished, though you can always make changes.", :class => "btn primary", :style => "margin:10px 0 10px 10px;" %>
     <% end %>
