--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,7 +44,8 @@
             <a href="#" class="dropdown-toggle">Admin</a>
             <ul class="dropdown-menu">
               <li><%= link_to "Companies", companies_path %></li>
-              <li><%= link_to "Users", users_path(:last => "50") %></li>
+              <li><%= link_to "Users", users_path %></li>
+              <li><%= link_to "Paths", paths_path %></li>
               <li><%= link_to "Usage Reports", usage_path %></li>
             </ul>
           </li>
