--- a/app/views/paths/index.html.erb
+++ b/app/views/paths/index.html.erb
@@ -30,6 +30,7 @@
           <td><%= link_to p.name, p %></td>
           <td><%= link_to p.company.name, change_company_path_path(p) %></td>
           <td><%= p.is_published ? "Published" : "" %></td>
+          <td><%= truncate(p.description, :length => 60) %></td>
           <td><%= truncate((p.path_user_roles.to_a.collect {|pur| pur.user_role.name }).join(", "), :length => 60) %></td>
           <td><%= p.enrollments.size.to_s %></td>
         </tr>
