--- a/app/views/mailer/welcome.html.erb
+++ b/app/views/mailer/welcome.html.erb
@@ -1,2 +1,2 @@
-<p>Your company administrator invited you to Moonlite, a new online learning management and certification tool. To finish your registration, visit the link below:</p>
+<p>Your company administrator invited you to MetaBright, a new online learning management and certification tool. To finish your registration, visit the link below:</p>
 <p><a href="<%= @accept_url %>"><%= @accept_url %></a></p>
