--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -85,11 +85,7 @@
   
   <% if can_edit_path(@path) %>
   <div class="actions">
-    <% unless @path.is_published %>
-      <%= link_to "Publish", edit_path_path(@path, :m => "settings"), :class => "btn primary" %>
-    <% end %>
-    <%= link_to "Delete", @path, :method => "delete", :confirm => "Are you sure you want to delete this "+name_for_paths+"?", :class => "btn secondary" %>
-    <%= link_to "Edit", {:controller => "paths", :action => "edit", :id => @path.id }, :class => "btn secondary" %>
-  <% end %>
+    <%= link_to "Edit", edit_path_path(@path), :class => "btn primary", :style => " margin: 10px 40px 0px 0px;" %>
   </div>
+  <% end %>
 </section>
