--- a/app/views/sections/_continue.html.erb
+++ b/app/views/sections/_continue.html.erb
@@ -14,9 +14,11 @@
     </div>
     <div class="answer">
       <input type="hidden" name="task_id" value="<%= @task.id %>">
-      <% if @task.question_type == "text" && @path.game_type == "character guess" %>
+      <% if @task.answer_type == 0 %>
+        <%= render "free_response", { :task => @task } %>
+      <% elsif @task.answer_type == 1 && @path.game_type == "character guess" %>
         <%= render "character_guess", { :answer => @task.answer1 } %>
-      <% elsif @task.question_type == "text" %>
+      <% elsif @task.answer_type == 1 %>
         <%= render "single_answer", { :task => @task } %>
       <% else %>
         <%= render "multiple_choice_answer", { :task => @task } %>
@@ -41,7 +43,7 @@
       });
     </script>
     <table id="challenge_messages" style="margin-top:30px; font-weight: bold; color:#57A957; display:none;">
-    <% if @points_awarded %>   
+    <% if !@free_response && @points_awarded %>   
       <tr>
         <td style="padding: 15px 15px 0 0; text-align:right; border-top:none;">
           <% if @correct == true %>
