--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -8,6 +8,6 @@
   <p style="font-size: 16px;">What you <strong>know</strong> makes you <strong>valuable</strong>. Is your true value <strong style="color:green;">recognized?</strong></p>
   <br>
   <%= form_for(:pages, :url => invitation_path, :method => "GET") do |f| %>
-  <%= f.text_field :email, :autofocus => true, :placeholder => "Enter your email address..." %> <%= f.submit "Request an Invite", :class => "btn primary",  %>
+  <%= f.text_field :email, :autofocus => true, :placeholder => "Enter your email address..." %> <%= f.submit "Request an Invite", :class => "btn primary"  %>
   <% end %>
 </section>
