--- a/app/views/sections/_continue.html.erb
+++ b/app/views/sections/_continue.html.erb
@@ -3,7 +3,7 @@
   <div class="span9">
     <div class="question">
       <%= image_tag @path.path_pic, :style => "width: 50px; float:left;" %>
-      <h2 style="margin-left:55px;">Section <%= @section.position.to_s %>. <%= @section.name %></h2>
+      <h2 style="margin-left:55px;"><%= @path.name %></h2>
       <p>Time allotted: <%= @time_allotted %></p>
       <blockquote style="margin: 40px 20px 20px 30px;">
         <p>
@@ -42,7 +42,13 @@
       });
     </script>
     <table id="challenge_messages" style="margin-top:30px; font-weight: bold; color:#57A957; display:none;">
-    <% if !@free_response && @points_awarded %>   
+    <% if @task.answer_type == 0 %>
+      <tr>
+        <td style="padding: 15px 15px 0 0; color:darkcyan; text-align:right; border-top:none;">
+          <p style="font-size: 16px;">*Points awarded by votes</p>
+        </td>
+      </tr>
+    <% elsif !@free_response && @points_awarded %>   
       <tr>
         <td style="padding: 15px 15px 0 0; text-align:right; border-top:none;">
           <% if @correct == true %>
