--- a/app/views/sections/_continue.html.erb
+++ b/app/views/sections/_continue.html.erb
@@ -1,3 +1,6 @@
+<% flash.each do |key, value| %>
+  <%= content_tag(:div, value, :class => "alert-message #{key}") %>
+<% end %>
 <%= form_tag({ :controller => :sections, :action => "continue" }, :remote => true, :method => "get", "data-type" => "html", :id => "challenge_form") %>
 <div class="task row">
   <div class="span9">
